--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,8 @@ html {
   font-size: 1em; }
 
 body {
-  font-family: "Work Sans", Arial, sans-serif; }
+  font-family: emoji;
+  background-color: #ffffc2; }
 
 input, textarea, p {
   font-weight: 300; }
@@ -64,11 +65,16 @@ a {
     padding: 7em 0; }
 
   a{
-    color: rgb(153, 74, 74);
+    color: #7b4c15;
+    font-family: emoji;
+    font-weight: 900;
+    font-size: 18px;
   }
 
   a:hover{
-    color: rgb(153, 74, 74);
+    color: #7b4c15;
+    font-family: emoji;
+    font-weight: 900;
   }
 
 .btn {
@@ -103,9 +109,6 @@ a {
     content: "";
     background: rgba(0, 0, 0, 0.4); }
 
-.navbar-brand {
-  text-transform: uppercase;
-  letter-spacing: .3em; }
 
 .navbar-toggler span i {
   font-size: 30px; }
@@ -120,10 +123,9 @@ a {
     .probootstrap_navbar {
       background: rgba(0, 0, 0, 0.6); } }
   .probootstrap_navbar .nav-item .nav-link {
-    padding: 1.6em 1em;
-    font-size: 12px;
-    text-transform: uppercase;
-    letter-spacing: .1em;
+    padding: 1.8em 0.3em;
+    font-size: 21px;
+    font-weight: 900;
     font-weight: 400; }
     @media (max-width: 991px) {
       .probootstrap_navbar .nav-item .nav-link {
@@ -171,15 +173,15 @@ a {
 
 #section-feature-testimonial .probootstrap-author img {
   width: 70px;
-  margin-bottom: 10px; }
+  margin-bottom: 10px;
+  border: 2px solid; }
 
 #section-feature-testimonial .probootstrap-author a {
   display: block; }
   #section-feature-testimonial .probootstrap-author a span {
     display: block; }
   #section-feature-testimonial .probootstrap-author a .probootstrap-name {
-    font-size: 12px;
-    text-transform: uppercase;
+    font-size: 20px;
     letter-spacing: .2em;
     color: #000;
     font-weight: 700; }
@@ -357,7 +359,13 @@ a {
   border-radius: 0px; }
   @media (max-width: 991px) {
     .probootstrap-form {
-      padding: 15px; } }
+      padding: 15px; } 
+    
+      iframe{
+        width: 300px;
+        height: 900px;
+      }
+    }
   .probootstrap-form image {
     font-weight: normal; }
   .probootstrap-form .form-control {
@@ -571,4 +579,9 @@ a {
   width: 50px;
   margin: 5px 10px;
   border-radius: 50%;
+}
+
+iframe{
+  width: 600px;
+  height: 500px;
 }
